# pygame-dialog

./: README.md  pyproject.toml
src/: main.py
src/pydialog/: pydialog.py
tests/: live.py
