[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydialog"
version = "0.0.1"
authors = [
  { name="Benjamin Gelb", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Benjamin-Gelb/pygame-dialog"
Issues = "https://github.com/Benjamin-Gelb/pygame-dialog/issues"